# Radium-Engine

./: CMakeLists.txt  LICENSE  README.md
include/: app.hpp  mesh3d.hpp  radium_export.hpp  shader.hpp  utils.hpp
src/: main.cpp
